Add online help, update google maps api, mobile add incident resources, op periods.

--- a/EmergencyHoundMobile/www/index.html
+++ b/EmergencyHoundMobile/www/index.html
@@ -55,6 +55,9 @@
                         <li> 
                             <a href="#config">Settings</a>
                         </li>
+                        <li>
+                            <a href="http://12.238.224.120/EmergencyHound/Content/help.html">Help</a>
+                        </li>
                         <li class="divider"></li>
                         <li>
                             <a data-ng-click="logOut()" href="">Log off</a>
@@ -278,9 +281,11 @@
     <script src="scripts/controllers/incidentEditController.js"></script>
     <script src="scripts/controllers/incidentMap2Controller.js"></script>
     <script src="scripts/controllers/incidentTeamController.js"></script>
+    <script src="scripts/controllers/incidentTeamEditController.js"></script>
     <script src="scripts/controllers/incidentResourcesController.js"></script>
     <script src="scripts/controllers/incidentResourceEditController.js"></script>
     <script src="scripts/controllers/incidentOpPeriodsController.js"></script>
+    <script src="scripts/controllers/incidentOpPeriodEditController.js"></script>
     <script src="scripts/controllers/incidentStatusController.js"></script>
     <script src="scripts/controllers/incidentStatusEditController.js"></script>
     <script src="scripts/controllers/incidentAttachController.js"></script>
